--- a/Exercices Python.ipynb
+++ b/Exercices Python.ipynb
@@ -1323,23 +1323,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 39: \n",
+    "Ecrire un prorgarmme qui permet de calculer la somme des nombres premier compris entre 1 et n entier donne."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i=1\n",
-    "while(1):\n",
-    "   for j in range(1,i):\n",
-    "    if i%j!=0:\n",
-    "        break\n",
-    "    if j==20:\n",
-    "        break\n",
-    "    print(i)\n",
-    "    i=i+1\n",
-    "if j==20:\n",
-    "    print(i)\n",
-    "        "
+    "import math\n",
+    "def isprime(n):\n",
+    "    a=int(math.sqrt(n))\n",
+    "    for j in range(2,a+1):\n",
+    "        if n%j==0:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Donner un nombre: 43\n",
+      "la somme est: 281\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=input(\"Donner un nombre: \")\n",
+    "s=0\n",
+    "for i in range(2,n+1):\n",
+    "    if isprime(i):\n",
+    "        s+=i   \n",
+    "print \"la somme est:\",s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 40:\n",
+    "Ecrire un programme qui permet de calculer la somme des multiples de 5 et 3 inferieur a 100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La somme est:  2418\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=0\n",
+    "for i in range(1,101):\n",
+    "    if i%3==0 or i%5==0:\n",
+    "        s+=i\n",
+    "print \"La somme est: \",s"
    ]
   },
   {
